--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-    "token": "NDI0NTgyODMxNjM3NzkwNzMw.DieCpw.pQTIa02Fpz1-5b72Tm9TgeyLK-4",
+    "token": "",
     "enabled_cogs": [
       "cogs.general",
       "cogs.fun",
