Even more cleanup.

--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-    "token": "",
+    "token": "NDI0NTgyODMxNjM3NzkwNzMw.DieGiw.UiNhYeeRs7oM3-ruybWbHz3_U2g",
     "enabled_cogs": [
       "cogs.general",
       "cogs.fun",
