Move enabled cogs to a separate file.

--- a/settings.json
+++ b/settings.json
@@ -1,11 +1,3 @@
 {
-    "token": "",
-    "enabled_cogs": [
-      "cogs.general",
-      "cogs.fun",
-      "cogs.owner",
-      "cogs.helpformatter",
-      "cogs.hentai",
-      "cogs.status"
-    ]
+    "token": ""
 }
