Added mod cog and prune command.

--- a/cog_settings.json
+++ b/cog_settings.json
@@ -5,6 +5,7 @@
       "cogs.owner",
       "cogs.helpformatter",
       "cogs.hentai",
-      "cogs.status"
+      "cogs.status",
+      "cogs.mod"
     ]
 }
